--- a/webrepl.html
+++ b/webrepl.html
@@ -63,24 +63,101 @@
 <div id="editor"></div>
 <script>
 
-function u82t(fileData){
-  var dataString = "";
-  for (var i = 0; i < fileData.length; i++) {
-    dataString += String.fromCharCode(fileData[i]);
-  }
- 
-  return dataString
-}
-function s2u8(str){
-  var arr = [];
-  for (var i = 0, j = str.length; i < j; ++i) {
-    arr.push(str.charCodeAt(i));
-  }
- 
-  var tmpUint8Array = new Uint8Array(arr);
-  return tmpUint8Array
-}
 
+
+function s2u8(string) {
+
+  let pos = 0;
+  const len = string.length;
+  const out = [];
+
+  let at = 0;  // output position
+  let tlen = Math.max(32, len + (len >> 1) + 7);  // 1.5x size
+  let target = new Uint8Array((tlen >> 3) << 3);  // ... but at 8 byte offset
+
+  while (pos < len) {
+    let value = string.charCodeAt(pos++);
+    if (value >= 0xd800 && value <= 0xdbff) {
+      // high surrogate
+      if (pos < len) {
+       const extra = string.charCodeAt(pos);
+       if ((extra & 0xfc00) === 0xdc00) {
+         ++pos;
+         value = ((value & 0x3ff) << 10) + (extra & 0x3ff) + 0x10000;
+       }
+     }
+      if (value >= 0xd800 && value <= 0xdbff) {
+       continue;  // drop lone surrogate
+     }
+    }
+
+    // expand the buffer if we couldn't write 4 bytes
+    if (at + 4 > target.length) {
+      tlen += 8;  // minimum extra
+      tlen *= (1.0 + (pos / string.length) * 2);  // take 2x the remaining
+      tlen = (tlen >> 3) << 3;  // 8 byte offset
+
+      const update = new Uint8Array(tlen);
+     update.set(target);
+     target = update;
+    }
+
+    if ((value & 0xffffff80) === 0) {  // 1-byte
+     target[at++] = value;  // ASCII
+     continue;
+    } else if ((value & 0xfffff800) === 0) {  // 2-byte
+     target[at++] = ((value >>  6) & 0x1f) | 0xc0;
+    } else if ((value & 0xffff0000) === 0) {  // 3-byte
+     target[at++] = ((value >> 12) & 0x0f) | 0xe0;
+     target[at++] = ((value >>  6) & 0x3f) | 0x80;
+    } else if ((value & 0xffe00000) === 0) {  // 4-byte
+     target[at++] = ((value >> 18) & 0x07) | 0xf0;
+     target[at++] = ((value >> 12) & 0x3f) | 0x80;
+     target[at++] = ((value >>  6) & 0x3f) | 0x80;
+    } else {
+      // FIXME: do we care
+     continue;
+    }
+
+    target[at++] = (value & 0x3f) | 0x80;
+  }
+
+  return target.slice(0, at);
+}
+ 
+function u82t(array) {
+    var out, i, len, c;
+    var char2, char3;
+ 
+    out = "";
+    len = array.length;
+    i = 0;
+    while(i < len) {
+    c = array[i++];
+    switch(c >> 4)
+    { 
+      case 0: case 1: case 2: case 3: case 4: case 5: case 6: case 7:
+        // 0xxxxxxx
+        out += String.fromCharCode(c);
+        break;
+      case 12: case 13:
+        // 110x xxxx   10xx xxxx
+        char2 = array[i++];
+        out += String.fromCharCode(((c & 0x1F) << 6) | (char2 & 0x3F));
+        break;
+      case 14:
+        // 1110 xxxx  10xx xxxx  10xx xxxx
+        char2 = array[i++];
+        char3 = array[i++];
+        out += String.fromCharCode(((c & 0x0F) << 12) |
+                       ((char2 & 0x3F) << 6) |
+                       ((char3 & 0x3F) << 0));
+        break;
+    }
+    }
+ 
+    return out;
+}
 
 function exe(){
 try{cmd="exec(open(\'"+document.getElementById("file-name").value+"\').read(),globals())";ws.send(cmd)} catch{alert ("登录后使用")}
@@ -128,7 +205,7 @@ editor.getSession().setMode("ace/mode/python");
 document.getElementById("editor").style.height=parseInt(document.documentElement.clientHeight*0.7)+"px"
 //editor.setValue(u82t(get_file_data));设置内容
 //
-editor.setValue("\n\n\n                 使用注意事项 \n\n\n1.编辑器是ACE编辑器 来自Github  webrpel 基于官方的魔改而成.\n\n2.选择文件这个是打开本地文件到编辑器，可编辑本地python，目前只设置了高亮类型为PYTHON。\n\n3.删除所有行只针对 \\n 生效.\n\n4.上传 执行 删除 下载 前需要设置文件名，就是上传前面的文本框,注意需要自行写上后缀,\n\n5.使用 执行 删除 下载 后 需要手动在命令行中回车才会生效.此功能只是把指令发到控制台，需要自行确认.\n\n6.此工具只是个人想法的实现,不保证稳定性，使用需自行承担风险.\n\n\n\n\n 已知的BUG:通过其他IDE 传入单片机的文件 如果包含中文，下载到编辑器会是乱码，但是保存或上传后 打开是正常的。可正常显示。" );
+editor.setValue("\n\n\n                 使用注意事项 \n\n\n1.编辑器是ACE编辑器 来自Github  webrpel 基于官方的魔改而成.\n\n2.选择文件这个是打开本地文件到编辑器，可编辑本地python，目前只设置了高亮类型为PYTHON。\n\n3.删除所有行只针对 \\n 生效.\n\n4.上传 执行 删除 下载 前需要设置文件名，就是上传前面的文本框,注意需要自行写上后缀,\n\n5.使用 执行 删除 下载 后 需要手动在命令行中回车才会生效.此功能只是把指令发到控制台，需要自行确认.\n\n6.此工具只是个人想法的实现,不保证稳定性，使用需自行承担风险.\n\n\n\n\n" );
 window.onresize = function(){
 document.getElementById("editor").style.height=parseInt(document.documentElement.clientHeight*0.7)+"px";
 term.cols =parseInt((document.documentElement.clientHeight*0.3-46-75)/12);
