--- a/webrepl.html
+++ b/webrepl.html
@@ -231,7 +231,7 @@ term.cols =parseInt((document.documentElement.clientHeight*0.3-46-75)/12);
 <input type="submit" id="button" value="Connect" onclick="button_click(); return false;" />
  
  <input type="button" id="button" value="获取文件列表" onclick='c_m_d("get-list")' />
-<input type="text" name="" id="file-name" value="" placeholder="Warming: 上传文件名不能为空"
+<input type="text" name="" id="file-name" value="" placeholder="上传文件名.py"
 />
 <input type="submit" id="" value="上传" onclick="upCode();return false;" />
  <input type="button" id="button" value="执行" onclick='c_m_d("run")' />
